Fix #123702: Don't Change TransOpt Flags with Language If Current Profile

We are currently setting all the Language "affect" options when
changing Language (Tooltips, Interface, Reports, New Data). This is
so that setting a language in a NEW config from the Quick Setup splash
screen will have those enabled. This PR keeps that but allows loading
old configs and keeping those options (#123702 & #112054). It also
allows changing language in Preferences without those changing as well.

Pull Request: https://projects.blender.org/blender/blender/pulls/132046